tests/should_fail/for_destructure_on_string.nv
module test
// for destructure on a non-list (String)
for (a, b) in "hello" {
    println(a)
}
